Class name change
– defined <p> class name

--- a/1thing.html
+++ b/1thing.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="content">
-        <p>What is 1 Thing Against Racism?</p>
+        <div class="category-title">What is 1 Thing Against Racism?</div>
         <div class="mirror-body">
             1 Thing Against Racism was founded in response to the increased racism against Asians due to the Pandemic.
             Many people have feelings of anger or fear, yet are hesitant to take action. 1 Thing Against Racism is a
@@ -70,7 +70,7 @@
 
 
             <div class="mirror-body">
-                <p>Objective</p>
+                <div class="category-title">Objective</div>
 
                 <div>
                     <li>Design a website to start spreading awareness about Aisan Racism.
@@ -82,19 +82,19 @@
 
                 <div class="objectives">
                     <div>
-                        <p>Role:</p> UX/UI designer
+                        <div class="category-title">Role:</div> UX/UI designer
                     </div>
                     <div>
-                        <p>Tools:</p> Figma
+                        <div class="category-title">Tools:</div> Figma
                     </div>
                     <div>
-                        <p>Team:</p> Kotomi Cogdill, <br>2 other designers, 3 developers
+                        <div class="category-title">Team:</div> Kotomi Cogdill, <br>2 other designers, 3 developers
                     </div>
 
 
                 </div>
 
-                <p>Challenges</p>
+                <div class="category-title">Challenges</div>
 
                 <li>Websites about Anti-Racism usually look serious and aggresive. How might we make it
                     approachable so that we are not demanding that people be open-minded?
@@ -108,7 +108,7 @@
             <div class="case-study-solution-landscape">
 
                 <div>
-                    <p>Solution 1</p>
+                    <div class="category-title">Solution 1</div>
 
                     <div class="case-study-solution-text">Optimize the use of friendly and approachable visuals. </div>
                     We tell users we're not an aggresive organization by the use of softer colors and imagery.
@@ -122,7 +122,7 @@
 
             
             <div>
-                <p>Solution 2</p>
+                <div class="category-title">Solution 2</div>
 
                 <div class="case-study-solution-text">Create a community for supporters with educational content. </div>
                 This is where you learn and connect with other supporters.
@@ -157,7 +157,7 @@
         later on as we test the design.
 
 
-        <p>Mid-fidelity Wireframes</p>
+        <div class="category-title">Mid-fidelity Wireframes</div>
 
         I created mid-fidelity wireframes of the landing page first so that developers can start working on it. I
         decided to include statistical facts that show racism against Asians is happening and has increased. I also included
@@ -186,7 +186,7 @@
 
      
 
-        <p>Hi-Fidelity Responsive Design</p>
+        <div class="category-title">Hi-Fidelity Responsive Design</div>
         To finalize the design, I moved on to visual design and established the organization's branding.
         For the images, I avoided images of people protesting because it makes the website aggressive. Instead, I picked
         an image that gives off positive impressions.
@@ -234,7 +234,7 @@
 
         </div>
 
-        <p>Here's the final responsive design I handed over to the developers.</p>
+        <div class="category-title">Here's the final responsive design I handed over to the developers.</div>
 
       <div>
 
