--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="content">
-        <p>What is Brightwheel?</p>
+        <div class="category-title">What is Brightwheel?</div>
         <div class="mirror-body">
             Brightwheel is a childcare management service that offers useful features to both owners and parents.
             Brightwheel provides an app that the school staff can use to share photos, videos, and daily activities with
@@ -70,7 +70,7 @@
         </div>
 
         <div class="mirror-body">
-            <p>Objective</p>
+            <div class="category-title">Objective</div>
 
             <div>
                 <li>Design a messaging feature that enables parents to communicate with each other.</li>
@@ -80,17 +80,17 @@
 
             <div class="objectives">
                 <div>
-                    <p>Client:</p> Brightwheel
+                    <div class="category-title">Client:</div> Brightwheel
                 </div>
                 <div>
-                    <p>Roles:</p> UX/UI designer & researcher
+                    <div class="category-title">Roles:</div> UX/UI designer & researcher
                 </div>
                 <div>
-                    <p>Tools:</p> Figma, Miro, Whimsical, Maze
+                    <div class="category-title">Tools:</div> Figma, Miro, Whimsical, Maze
                 </div>
             </div>
 
-            <p>Challenges</p>
+            <div class="category-title">Challenges</div>
             <li>Not all parents are open to sharing their personal or their child's information. How might we provide
                 controls to protect their information? </li>
             <li>Parents have a hard time getting to know other parents in-person. Furthermore, it's also hard to know
@@ -121,7 +121,7 @@
 
 
 
-        <p>1:1 User Interviews</p>
+        <div class="category-title">1:1 User Interviews</div>
         Through user interviews, I was able to learn the concerns and needs of the parents.
         All of the participants were not very concerned about their privacy since their daycare is small. However, some
         participants showed concerns about privacy with regards to larger schools.
@@ -163,7 +163,7 @@
     <div class="content mirror-body">
 
 
-        <p>Persona</p>
+        <div class="category-title">Persona</div>
         In order to keep in mind who I was designing this feature for and what I should focus on, I created a
         persona to deepen user understandings and empathize with them. I made sure to follow the interview summary
         carefully since this persona was important to shape the design of the new feature I'm designing.
@@ -182,7 +182,7 @@
         </div>
 
 
-        <p>User Flow</p>
+        <div class="category-title">User Flow</div>
         I decided to make a user flow to empathize with users in how they would think and take actions to complete a
         task. Even though Brightwheel is an app I use every day, I only interact with the staff view, which is different
         from the parents view. For that reason and to understand the users (the parents) better, I had to do some some
@@ -213,7 +213,7 @@
 
     <div class="content mirror-body">
 
-        <p>Sketches</p>
+        <div class="category-title">Sketches</div>
 
         Before creating wireframes, I sketched out different ideas to organize my thoughts. I followed the style of app
         for the privacy settings to stay consistent. For the tagged children feature, I tried to imitate other social
@@ -233,7 +233,7 @@
 
 
 
-        <p>Mid-Fidelity Wireframes</p>
+        <div class="category-title">Mid-Fidelity Wireframes</div>
         I made wireframes before moving on to hi-fidelity design so that I could focus on the flows for the whole app. I
         based these on the sketches and screenshots from the Brightwheel app. I wanted to focus on putting the privacy
         settings link somewhere easy to find since it's so important for users. However, the difficult part of this
@@ -270,7 +270,7 @@
 
 
 
-        <p>Hi-Fidelity Responsive Design</p>
+        <div class="category-title">Hi-Fidelity Responsive Design</div>
         Once I finished the wireframes, I moved on to hi-fidelity mocks to finalize my designs.
         While designing, I paid special attention to match the colors and paradigms in the original design.
         I made three flows for the parent messaging feature: sending a message request, editing privacy
@@ -338,7 +338,7 @@
 
     <div class="content mirror-body">
 
-        <p>Prototype and Usability Test</p>
+        <div class="category-title">Prototype and Usability Test</div>
         <a class="link"
             href="https://www.figma.com/proto/kC1vyScK9X1n2jBAD8PLZA/Brightwheel-Hi-fi-design?page-id=0%3A1&node-id=27%3A96&viewport=241%2C48%2C0.3&scaling=scale-down&starting-point-node-id=27%3A96&show-proto-sidebar=1"
             target="_blank">View Prototype</a><br><br>
@@ -349,7 +349,7 @@
             <li>Maze (10 participants, preferably parents)</li>
         </ul>
 
-        <p>Affinity Map</p>
+        <div class="category-title">Affinity Map</div>
         After the usability testing, I summarized the findings so that I could revise the parts of the design that
         made the users frustrated or confused.
         I did not hear any major privacy concerns regarding the app and its interface; rather I received comments
@@ -367,7 +367,7 @@
             </a>
         </div>
 
-        <p>Priority Revision</p>
+        <div class="category-title">Priority Revision</div>
         I decided to make revisions specifically aiming to solve participants' confusion and frustrations from the
         usability testing.
         Of course, while making these revisions I matched the original design as much as possible.
