--- a/Mirror.html
+++ b/Mirror.html
@@ -57,14 +57,14 @@
 
 
     <div class="content">
-        <p>What is Mirror?</p>
+        <div class="category-title">What is Mirror?</div>
         <div class="mirror-body">
             Mirror is a successful clothing brand founded in 1994. They own more than 400 physical stores worldwide.
             Their target audience is people of all ages who care about affordable yet decent quality clothing.
         </div>
 
         <div class="mirror-body">
-            <p>Objectives</p>
+            <div class="category-title">Objectives</div>
 
             <div>
                 <li>Design a responsive e-commerce website that enables Mirror to sell their products to a broader
@@ -75,13 +75,13 @@
 
             <div class="objectives">
                 <div>
-                    <p>Client:</p> Mirror (fictional)
+                    <div class="category-title">Client:</div> Mirror (fictional)
                 </div>
                 <div>
-                    <p>Roles:</p> UX/UI designer & researcher
+                    <div class="category-title">Roles:</div> UX/UI designer & researcher
                 </div>
                 <div>
-                    <p>Tools:</p> Figma, Optimal Workshop, Miro, Whimsical
+                    <div class="category-title">Tools:</div> Figma, Optimal Workshop, Miro, Whimsical
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
 
 
 
-        <p>Competitive Analysis</p>
+        <div class="category-title">Competitive Analysis</div>
 
         I started by researching Mirror's competitors in order to understand who the competitors are and what
         they are doing differently.
@@ -117,7 +117,7 @@
 
 
 
-        <p>1:1 User Interviews</p>
+        <div class="category-title">1:1 User Interviews</div>
         I conducted user interviews with 5 individuals aged 20-55 who purchased clothes online in the past three
         months.
         I wanted to collect qualitative data so that I can understand the users more.
@@ -146,7 +146,7 @@
 
 
 
-        <p>Persona</p>
+        <div class="category-title">Persona</div>
 
         Based on the research results, I created a persona that addresses the major user needs.
         Since the majority of participants mentioned that they prefer in-store shopping, I decided to design
@@ -157,7 +157,7 @@
 
 
 
-        <p>Card Sorting and Site Map</p>
+        <div class="category-title">Card Sorting and Site Map</div>
         Since there are so many categories/subcategories, I decided to do card sorting testing so that users
         can find items easily.
         I recruited 7 individuals aged 23-50 to participate in a card sorting test to see how they categorized
@@ -166,7 +166,7 @@
         website.
         <img class=content-top-bottom src="img/Sitemap.jpg" alt="Site Map">
 
-        <p>User Flow</p>
+        <div class="category-title">User Flow</div>
 
         After creating a persona, I created a user flow to better understand and empathize with the users.
         This process helped me to form my idea of how the website should look and what features are
@@ -190,7 +190,7 @@
 
     <div class="content mirror-body">
 
-        <p>Wire Flows</p>
+        <div class="category-title">Wire Flows</div>
         I created lo-fi wireframes to visualize the website. It helped me to focus on user flows rather
         than the UI. I made sure that users can easily find the shipping/returns policy since it is the main concern for
         my persona.
@@ -201,7 +201,7 @@
 
 
         <div>
-            <p>Hi-Fi Responsive Design</p>
+            <div class="category-title">Hi-Fi Responsive Design</div>
             I made hi-fi UI designs for both desktop and mobile based on the wireframes and color palette.
             I also went back to check if the design was successful in meeting the needs of my persona.
             I wanted to make the flow really easy since I thought the large catalog might overwhelm users, which some of
@@ -226,7 +226,7 @@
 
     <div class="content mirror-body">
 
-        <p>Prototype and Usability Test</p>
+        <div class="category-title">Prototype and Usability Test</div>
         <a class="link"
             href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=1%3A559&viewport=555%2C473%2C0.03870538994669914&scaling=contain"
             target="_blank">View Prototype</a><br><br>
@@ -240,14 +240,14 @@
 
 
 
-        <p>Affinity Map</p>
+        <div class="category-title">Affinity Map</div>
         I synthesized the user test results and created an Affinity Map.
         It helped me to understand the successes, frustrations, and necessary improvements to deliver better
         experiences.
         <img class=content-top-bottom src="img/Affinity Map.jpg" alt="Affinity Map">
 
 
-        <p>Priority Revision</p>
+        <div class="category-title">Priority Revision</div>
         <a class="link"
             href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=60%3A3628&viewport=543%2C566%2C0.036799125373363495&scaling=contain"
             target="_blank">View Prototype</a><br><br>
