--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <div class="abouttext image-right">
 
             <div>
-                <p>Background</p>
+                <div class="category-title">Background</div>
                 I worked for a travel agency in Japan, where I crafted unique tours with team members
                 from
                 multiple backgrounds and countries. I spent a lot of time researching destinations and putting myself
@@ -82,7 +82,7 @@
 
                 <div class="about-text">
 
-                    <p>Why UX?</p>
+                    <div class="category-title">Why UX?</div>
 
                     I often find myself thinking and caring about others, which I got from growing up
                     in Japan.
@@ -117,7 +117,7 @@
 
     <div class="content">
         <div class="about-bottom">
-            <p>Outside of design I love:</p>
+            <div class="category-title">Outside of design I love:</div>
             <li>My dogs, Warabi and Mochi</li>
             <li>Matcha (I’m from Uji, home to the best matcha in Japan!)</li>
             <li>Boba</li>
