--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="content">
-        <p>What is All About Matcha?</p>
+        <div class="category-title">What is All About Matcha?</div>
         <div class="mirror-body">
             All About Matcha is a small matcha shop based in Kyoto, Japan that sells matcha and provides tea ceremony
             classes on-site.
@@ -71,7 +71,7 @@
         </div>
 
         <div class="mirror-body">
-            <p>Objective</p>
+            <div class="category-title">Objective</div>
 
             <div>
                 <li>Design a hi-fidelity, responsive e-commerce website with virtual tea ceremony class bookings.</li>
@@ -80,17 +80,17 @@
 
             <div class="objectives">
                 <div>
-                    <p>Client:</p> All About Matcha (fictional)
+                    <div class="category-title">Client:</div> All About Matcha (fictional)
                 </div>
                 <div>
-                    <p>Roles:</p> UX/UI designer & researcher
+                    <div class="category-title">Roles:</div> UX/UI designer & researcher
                 </div>
                 <div>
-                    <p>Tools:</p> Figma, Miro, Whimsical, Maze
+                    <div class="category-title">Tools:</div> Figma, Miro, Whimsical, Maze
                 </div>
             </div>
 
-            <p>Challenges</p>
+            <div class="category-title">Challenges</div>
             <li>Most people have no idea what to bring to a Japanese Tea Ceremony, or what it's all about.
             </li>
             <li>Japanese Tea Ceremony can be intimidating and appear to have strict manners.</li>
@@ -112,7 +112,7 @@
 
     <div class="content mirror-body">
 
-        <p>Secondary Research & Competitive Analysis</p>
+        <div class="category-title">Secondary Research & Competitive Analysis</div>
 
         To begin this project, I did research to understand the matcha market as well as to learn how people perceive
         matcha.
@@ -137,7 +137,7 @@
 
 
 
-        <p>Survey</p>
+        <div class="category-title">Survey</div>
 
         I conducted a survey to get overall impressions about matcha and Japanese Tea Ceremony.
         The majority of participants associated it with forms of desserts and drinks, corroborating the competitive
@@ -157,7 +157,7 @@
         </div>
 
 
-        <p>1:1 User Interviews</p>
+        <div class="category-title">1:1 User Interviews</div>
         I conducted user interviews to dive deeper into the topic and find needs and frustrations. I recruited 6
         individuals who like matcha to hear their feedback about matcha and Japanese Tea Ceremony. I learned that the
         majority of people would
@@ -199,7 +199,7 @@
     <div class="content mirror-body">
 
 
-        <p>Persona</p>
+        <div class="category-title">Persona</div>
 
         To empathize with the users and remember their needs, I created a persona that
         represents a core user. At first, I was thinking that my target users are people who appreciate
@@ -218,7 +218,7 @@
         </div>
 
 
-        <p>User Flow</p>
+        <div class="category-title">User Flow</div>
 
         After defining my persona, I created a user flow to visualize the paths that users would take to book a
         tea ceremony class.
@@ -248,7 +248,7 @@
 
     <div class="content mirror-body">
 
-        <p>Sketches</p>
+        <div class="category-title">Sketches</div>
         In order to have a sense of how the website will look, I decided to sketch out my ideas before moving on to
         wireframes.
         I focused on the two core areas of the business: matcha e-commerce and online Japanese Tea Ceremony classes.
@@ -268,7 +268,7 @@
             </a>
         </div>
 
-        <p>Mid-Fidelity Wireframes</p>
+        <div class="category-title">Mid-Fidelity Wireframes</div>
         Next I moved on to wireframes. Here I mainly focused on the booking flow so that users will
         be able to have a smooth experience.
         In the competitive analysis I found that the direct competitors (Authentic Kyoto Tea Ceremony and Bikouen) each
@@ -321,7 +321,7 @@
 
 
 
-        <p>Hi-Fidelity Responsive Design</p>
+        <div class="category-title">Hi-Fidelity Responsive Design</div>
         Next I created hi-fidelity designs based on the wireframes. I decided to change the layout of the main page
         since it
         looked text-heavy.
@@ -374,7 +374,7 @@
     <div class="content mirror-body">
 
 
-        <p>Prototype and Usability Test</p>
+        <div class="category-title">Prototype and Usability Test</div>
         <a class="link"
             href="https://www.figma.com/proto/y0gOSsfTJKw3IbhAWIWNIo/Matcha-hi-fi-design?page-id=0%3A1&node-id=143%3A348"
             target="_blank">View Prototype</a><br><br>
@@ -394,7 +394,7 @@
 
 
 
-        <p>Affinity Map</p>
+        <div class="category-title">Affinity Map</div>
         I synthesized the results, which mainly contained feedback about the tea ceremony classes and booking process.
         After grouping the successes and failures, I came up with solutions and improvements for each issue.
 
@@ -409,7 +409,7 @@
         </div>
 
 
-        <p>Priority Revision</p>
+        <div class="category-title">Priority Revision</div>
         After analyzing what makes users frustrated or confused, I made revisions based on the
         solutions/improvements in the affinity map.
         <br>
