--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
         <div class="contact">
             <div class="contact-text">
-                <p>I love receiving emails!</p>
+                <div class="category-title">I love receiving emails!</div>
 
                 <div>Feel free to send me emails about anything!
                     <br>I'm more than happy to talk about Japan, dogs, and food!
