--- a/skyhub.html
+++ b/skyhub.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="content">
-        <p>What is SkyHub?</p>
+        <div class="category-title">What is SkyHub?</div>
         <div class="mirror-body">
             Skyhub is a grocery delivery website that offers users the convenience of having their groceries delivered
             by drones. Skyhub aims to provide a new website catering specifically to seniors aged 75 and above.
@@ -75,22 +75,32 @@
 
             <div class="objectives2">
                 <div>
-                    <p>Roles:</p> UX/UI Designer & Researcher
+                    <div class="category-title">Roles:</div> UX/UI Designer & Researcher
                 </div>
                 <div>
-                    <p>Team:</p> Kotomi Cogdill, Product Manager, Developers
+                    <div class="category-title">Team:</div> Kotomi Cogdill, Product Manager, Developers
                 </div>
                 <div>
-                    <p>Duration:</p> 4 weeks
+                    <div class="category-title">Duration:</div> 4 weeks
                 </div>
 
                 <div>
-                    <p>Tools:</p> Figma, Notion
+                    <div class="category-title">Tools:</div> Figma, Notion
                 </div>
 
             </div>
 
-            <p>Challenges</p>
+
+            <div class="category-title">Background</div>
+            <div class="mirror-body">
+                Skyhub works with Kamishihoro city hall in Hokkaido, which has been implementing programs
+                to support seniors, including a specialized bus booking system. The city hall distributed tablets to
+                some households and approached Skyhub to develop a user-friendly grocery delivery website accessible on
+                these iPads, aiming to enhance services for seniors.
+
+            </div>
+
+            <div class="category-title">Challenges</div>
             In general, senior citizens may not be familiar with using digital products. Therefore, it is expected
             that they may encounter challenges when navigating regular grocery delivery websites. <br><br>
         </div>
@@ -107,7 +117,7 @@
     <div class="content case-study-solution-landscape">
 
         <div>
-            <p>Solution</p>
+            <div class="category-title">Solution</div>
 
             <div class="case-study-solution-text">Make the flow linear with forward and backward navigation only. </div>
             I emphasized having minimal features on each page and implemented a step-by-step process
@@ -152,9 +162,9 @@
 
 
 
-        <p>1:1 User Interviews</p>
-        Now that I have grasped the general requirements and considerations, I have made the decision to delve deeper
-        and gather real user feedback to gain a better understanding of their needs and preferences.
+        <div class="category-title">1:1 User Interviews</div>
+        Once I grasped the general requirements and considerations, I decided to delve deeper and gather real user
+        feedback to gain a better understanding of their needs and preferences.
 
         <br><br>
 
@@ -188,8 +198,9 @@
     </div>
 
     <div class="content mirror-body">
-        <p>Persona</p>
-        This website would primarily be used by specific users, so there was no need to create a persona. Here are some
+        <div class="category-title">Persona</div>
+        This website would primarily be used by a specific demographic, so there was no need to create a persona. Here
+        are some
         characteristics of the actual users:
 
         <div>
@@ -206,7 +217,7 @@
 
 
 
-        <p>User Flow</p>
+        <div class="category-title">User Flow</div>
         After gaining a comprehensive understanding of the user needs and pain points through my research, I focused on
         determining the specific details of the user flow. I ensured that the flow remained linear, allowing users to
         navigate either forward or backward. However, on the cart page, I provided flexibility for users to modify order
@@ -238,7 +249,7 @@
 
     <div class="content mirror-body">
 
-        <p>Sketches</p>
+        <div class="category-title">Sketches</div>
 
         To visualize and consolidate my ideas, I created sketches of the main screens. I chose to design the flow as a
         linear process, avoiding branching out to different pages with distinct functions. This approach allows users to
@@ -258,16 +269,16 @@
 
 
 
-        <p>Mid-Fidelity Wireframes</p>
+        <div class="category-title">Mid-Fidelity Wireframes</div>
         To ensure that the site was user-friendly for seniors, I made sure to:
 
         <div>
-            <li>Eliminated features like recommendations found on regular grocery delivery sites to prevent information
+            <li>Eliminate features like recommendations found on regular grocery delivery sites to prevent information
                 overload.
             </li>
-            <li>Organized features into separate pages to enable seniors to proceed step-by-step.
+            <li>Organize features into separate pages to enable seniors to proceed step-by-step.
             </li>
-            <li>Designed a linear process instead of branching out to different pages with different functions.
+            <li>Design a linear process instead of branching out to different pages with different functions.
             </li>
         </div>
 
@@ -311,8 +322,8 @@
 
 
 
-        <p>Hi-Fidelity Design</p>
-        Incorporating the client's request for visual design consistency with their existing bus booking website, I
+        <div class="category-title">Hi-Fidelity Design</div>
+        Incorporating the client's request for visual design consistency with their existing bus-booking website, I
         integrated the following research findings into my design approach:
         Ensuring that text sizes are larger than 18px, colors are chosen appropriately, and other visual elements are
         designed to be easily visible for all users. <br><br>
@@ -327,7 +338,7 @@
 
 
 
-        Including "up" and "down" buttons to assist users who may not be aware of the scrolling functionality,
+        I included "up" and "down" buttons to assist users who may not be aware of the scrolling functionality,
         enabling them to navigate the page vertically.
         <div>
 
@@ -377,7 +388,7 @@
 
     <div class="content mirror-body">
 
-        <p>Prototype and Usability Test</p>
+        <div class="category-title">Prototype and Usability Test</div>
         <a class="link"
             href="https://www.figma.com/proto/qKoACrXzA4t2YThlsfJRDs/%E9%AB%98%E9%BD%A2%E8%80%85%E5%90%91%E3%81%91%E6%B3%A8%E6%96%87%E7%AE%A1%E7%90%86%E3%82%B7%E3%82%B9%E3%83%86%E3%83%A0?page-id=81%3A1092&type=design&node-id=547-1730&viewport=565%2C520%2C0.12&scaling=min-zoom&starting-point-node-id=547%3A1730"
             target="_blank">View Prototype</a><br><br>
@@ -385,7 +396,8 @@
         Hall. I requested that real users be involved in the process, and we were able to have a few seniors test it.
 
         <br><br>
-        I was unable to be there physically or online, but my project manager was able to conduct the usability test.
+        IAlthough I was unable to attend in person (as I work remotely), my project manager kindly conducted the
+        usability test on my behalf.
         Here are the findings:
 
         <div>
