--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="content">
-        <p>What is Windows to Japan?</p>
+        <div class="category-title">What is Windows to Japan?</div>
         <div class="mirror-body">
             Windows to Japan is a travel company that provides customized tours to inbound travellers to Japan (I used
             to work there!).
@@ -71,7 +71,7 @@
             during their stay in the case of emergencies or just for general questions.
 
             <div class="mirror-body">
-                <p>Objective</p>
+                <div class="category-title">Objective</div>
 
                 <div>
                     <li>Design an end-to-end travel application that replaces the physical travel files.
@@ -83,16 +83,16 @@
 
                 <div class="objectives">
                     <div>
-                        <p>Client:</p> Windows to Japan (Volunteer)
+                        <div class="category-title">Client:</div> Windows to Japan (Volunteer)
                     </div>
                     <div>
-                        <p>Roles:</p> UX/UI designer & researcher
+                        <div class="category-title">Roles:</div> UX/UI designer & researcher
                     </div>
                     <div>
-                        <p>Tools:</p> Figma, Miro, Whimsical, Maze
+                        <div class="category-title">Tools:</div> Figma, Miro, Whimsical, Maze
                     </div>
                 </div>
-                <p>Challenges</p>
+                <div class="category-title">Challenges</div>
 
                 <li>Itineraries are usually overloaded with important information. How might we simplify the
                     contents when there is a lot of information?
@@ -109,7 +109,7 @@
             <div class="video-content">
 
                 <div>
-                    <p>Solution 1</p>
+                    <div class="category-title">Solution 1</div>
 
                     <div class="video-text">Streamlined main page that automatically syncs with your time zone.</div>
                     Simple and to-the-point design that delivers clear messages to the users.
@@ -130,7 +130,7 @@
                 </video>
 
                 <div>
-                    <p>Solution 2</p>
+                    <div class="category-title">Solution 2</div>
 
                     <div class="video-text">Easier scanning with "read more" button & a chat feature for quick help.
                     </div>
@@ -156,7 +156,7 @@
     </div>
 
     <div class="content mirror-body">
-        <p>Competitive analysis</p>
+        <div class="category-title">Competitive analysis</div>
         To start with, I was curious how other travel agencies transitioned from providing physical documents to their
         clients to
         providing a full mobile experience. However, I couldn’t find any competitors doing this. Instead, I picked three
@@ -179,7 +179,7 @@
 
         </div>
 
-        <p>Survey</p>
+        <div class="category-title">Survey</div>
         Now that I had some ideas of how I would organize and design the app, <b>I wanted to include the users in my
             design.</b> In order to do that, I started with a survey to learn about the frustrations and needs that
         people have
@@ -201,7 +201,7 @@
                 <span style="background-image: url('wtj-img/Survey.jpg')"></span>
             </a>
 
-            <p>1:1 User Interviews</p>
+            <div class="category-title">1:1 User Interviews</div>
             Once I gathered quantitative feedback on travel apps, I was curious what travel agency users have to say.
             Specifically, I wanted to discover the frustrations and needs people have when 1) using PDF or printed
             itineraries and 2) when connecting with an agent when a problem arises. From these interviews, I learned
@@ -244,7 +244,7 @@
     <div class="content mirror-body">
 
 
-        <p>Persona</p>
+        <div class="category-title">Persona</div>
 
         In order to keep in mind who I'm designing this app for, I summarized the important feedback into a single
         persona, representing a core user.
@@ -264,7 +264,7 @@
         </div>
 
 
-        <p>User Flow</p>
+        <div class="category-title">User Flow</div>
         After I established the persona, I wanted to know more about the users–how they navigate the website in order to
         complete tasks. <b>I decided to make a user flow in order to visualize how and when a user would take actions
             and
@@ -297,7 +297,7 @@
 
     <div class="content mirror-body">
 
-        <p>Sketches</p>
+        <div class="category-title">Sketches</div>
         Before designing any wireframes, <b>I decided to sketch the layout of the app to solidify my rough ideas.</b> I
         sketched one version first to combine the ideas of the app layout I got from my competitive analysis and
         inspirations.
@@ -330,7 +330,7 @@
 
 
 
-        <p>Mid-Fidelity Wireframes</p>
+        <div class="category-title">Mid-Fidelity Wireframes</div>
         Next I created mid-fidelity wireframes to focus on the app's usability before making the final designs. While
         creating these wireframes, I focused on the flow of the app, looking for anything I could iterate on. Here are
         the final wireframes.
@@ -378,7 +378,7 @@
 
 
 
-        <p>Mid-fidelity Prototype and Usability Test</p>
+        <div class="category-title">Mid-fidelity Prototype and Usability Test</div>
         <a class="link"
             href="https://www.figma.com/proto/KbbHPLf2m5jmZazjOuph9m/WTJ-wireframes?page-id=0%3A1&node-id=129%3A6223&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=129%3A6223"
             target="_blank">View Prototype</a><br>
@@ -389,7 +389,7 @@
             <li>Maze (7 participants)</li>
         </ul><br>
 
-        <p>Affinity Map</p>
+        <div class="category-title">Affinity Map</div>
         I created the affinity map below to summarize user feedback and see what can be improved. Through the usability
         testing I verified that <b>the majority of people found the swiping effect unintuitive.</b> In addition to that,
         <b>several participants mentioned that the edit icon was hard to find.</b> I was glad to test the wireframes at
@@ -410,7 +410,7 @@
 
 
 
-        <p>Hi-Fidelity End-to-End Design</p>
+        <div class="category-title">Hi-Fidelity End-to-End Design</div>
         I worked on hi-fidelity designs based on the wireframes and feedback I received from the usability testing in
         the previous process. I added onboarding so that users know how the app works.
 
@@ -479,7 +479,7 @@
 
     <div class="content mirror-body">
 
-        <p>Prototype and Usability Test</p>
+        <div class="category-title">Prototype and Usability Test</div>
         <a class="link"
             href="https://www.figma.com/proto/lrMngfGejAwBsqBNVA532Q/WTJ-hi-fi-design?page-id=0%3A1&node-id=16%3A525&starting-point-node-id=16%3A525"
             target="_blank">View Prototype</a><br><br>
@@ -491,7 +491,7 @@
             <li>Maze (13 participants)</li>
         </ul>
 
-        <p>Affinity Map</p>
+        <div class="category-title">Affinity Map</div>
         Since I recruited more participants this time, usability testing revealed more feedback that helped me to see my
         design objectively. <b>I wanted to make an affinity map again to summarize the user feedback and organize
             them.</b>
@@ -507,7 +507,7 @@
             </a>
         </div>
 
-        <p>Priority Revision</p>
+        <div class="category-title">Priority Revision</div>
         After testing the app design, I was able to understand what was making users confused about the design. I wanted
         to make revisions since both <b>the edit button and swiping effect weren't clear enough. </b>Apart from the
         frustrations, I received a lot of good feedback about the app providing a detailed yet simple interface, which
