--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </h1>
             Bilingual &#127471;&#127477;&#127482;&#127480;
             UX/UI designer based in the SF Bay Area.
-            I create thoughtful, aesthetic designs to bring users happy experiences.<br>
+            Empowering Confidence with Thoughtful Design.<br>
 
 
 
