--- a/skyhub.html
+++ b/skyhub.html
@@ -93,7 +93,7 @@
 
             <div class="category-title">Background</div>
             <div class="mirror-body">
-                Skyhub works with Kamishihoro city hall in Hokkaido, which has been implementing programs
+                Skyhub works with Kamishihoro city hall in Hokkaido, Japan, which has been implementing programs
                 to support seniors, including a specialized bus booking system. The city hall distributed tablets to
                 some households and approached Skyhub to develop a user-friendly grocery delivery website accessible on
                 these iPads, aiming to enhance services for seniors.
@@ -396,7 +396,7 @@
         Hall. I requested that real users be involved in the process, and we were able to have a few seniors test it.
 
         <br><br>
-        IAlthough I was unable to attend in person (as I work remotely), my project manager kindly conducted the
+        Although I was unable to attend in person (as I work remotely), my project manager kindly conducted the
         usability test on my behalf.
         Here are the findings:
 
@@ -409,6 +409,12 @@
                 product list instead of being taken to a product page.
             </li>
         </div>
+
+        <br>Considering that the majority of users indicated a preference for adding items from the product list, I've
+        updated the design to allow them to directly add items.
+
+
+
         <div>
 
             <a href=#img-revision class="lightbox-link">
